# functorpack

./: .gitignore  .merlin  LICENSE  Makefile  OMakefile  README.md  _oasis  _oasis_hier.om  circle.yml  functorpack.opam  setup.ml
.circleci/: config.yml
progs/: Unittests.ml  _oasis_build.om  _oasis_install.om
src/: _oasis_build.om  _oasis_hier.om
src/functorpack/: FPack.mli  META  OMakefile  _oasis_build.om  _oasis_hier.om  _oasis_install.om
src/functorpack/modules/: Composer.ml  Extract.ml  Figly.ml  Types.ml  Yojson.ml  _oasis_build.om
src/testing/: META  T_frame.ml  _oasis_build.om  _oasis_install.om
